--- a/tables/array_methods.org
+++ b/tables/array_methods.org
@@ -1,5 +1,12 @@
-| Method Name | Description                                      |
-|-------------+--------------------------------------------------|
-| .push()     | Appends a new item to the end of the array.      |
-| .pop()      | Removes and returns the first item in the array. |
-
+| Method Name | Description                                                                                                    |
+|-------------+----------------------------------------------------------------------------------------------------------------|
+| .push()     | Adds one or more elements to the end of an array and returns the new length of the array.                      |
+| .pop()      | Removes and returns the first item in the array.                                                               |
+| .unshift()  | Adds one or more elements to the beginning of an array and returns the new length of the array.                |
+| .shift()    | Removes the first element from an array and returns that element. This method changes the length of the array. |
+| .reverse()  | Reverses an array in place. The first array element becomes the last and the last becomes the first.           |
+| .splice()   | Changes the content of an array, adding new elements while removing old elements.                              |
+| .slice()    | Returns a shallow copy of a portion of an array into a new array object.                                       |
+| .join()     | Joins all elements of an array into a string                                                                   |
+| .indexOf()  | Returns the first index at which a given element can be found in the array, or -1 if it is not present.        |
+| .sort()     | Sorts the elements of an array in place and returns the array. The default sort order is Alphabetic.           |
